# pitt-biosc1540-2024s

./: .LICENSE.md  .LICENSE_INFO.md  .gitattributes  .gitignore  .gitlab-ci.yml  .markdownlint.yaml  .pre-commit-config.yaml  CNAME  LICENSE_INFO.md  Makefile  README.md  conda-lock.yml  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
.gitlab/issue_templates/: assignment.md
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
biosc1540/: .pages  CNAME  blank.ipynb  index.md  students.md  team.md
biosc1540/.overrides/: main.html
biosc1540/assessments/: README.md  index.md  portfolio.md
biosc1540/assessments/assignments/: .pages  README.md  index.md
biosc1540/assessments/assignments/01/: .pages  a01.ipynb  index.ipynb
biosc1540/assessments/assignments/02/: a02.ipynb
biosc1540/assessments/assignments/03/: .pages  a03-key.ipynb  a03.ipynb
biosc1540/assessments/assignments/04/: index.md
biosc1540/assessments/assignments/05/: index.md
biosc1540/assessments/checkpoints/: .pages  README.md  cadd.md  genomics.md  index.md  simulations.md  transcriptomics.md
biosc1540/assessments/checkpoints/cadd/: .pages  PubChem_max_dose_records.sdf  index.md
biosc1540/assessments/checkpoints/genomics/: .gitignore  .pages  add_genes.py  amr.md  build_genes_md.py  data-acquisition.ipynb  gene-names.npy  genes.json  genes.md  genomics-checkpoint.ipynb  index.ipynb  index.md
biosc1540/assessments/checkpoints/simulations/: index.md
biosc1540/assessments/checkpoints/transcriptomics/: .pages  cell-stressors.md  data-acquisition.ipynb  index.md  transcriptomics-checkpoint.ipynb  ttest-example.ipynb
biosc1540/assessments/participation/: README.md  index.md
biosc1540/assessments/quizzes/: .pages  README.md  index.md
biosc1540/assessments/quizzes/cadd/: index.md
biosc1540/assessments/quizzes/genomics/: index.md
biosc1540/css/: base.css  colors.css
biosc1540/data-sources/: .pages
biosc1540/data-sources/geo/: README.md
biosc1540/data-sources/ncbi-gene/: .pages  README.md
biosc1540/data-sources/ndaro/: index.md
biosc1540/data-sources/sra/: installation.md  tutorials.md
biosc1540/files/: colors.yml  mpl-rc-params.json
biosc1540/files/csv/: grade-scale.csv  mol-biodegrade-props.csv  schedule.csv
biosc1540/files/fastq/: SRR25437009-sample.fastq
biosc1540/files/npy/: protein-contact-maps.npy
biosc1540/lectures/: .pages  01.md  index.md
biosc1540/lectures/01/: .pages  index.md
biosc1540/lectures/02/: .pages  index.ipynb  index.md  l02_bacteria_pop.ipynb
biosc1540/lectures/03/: .pages  index.md  l03-bored.ipynb  l03.ipynb
biosc1540/lectures/04/: .pages  index.md  l04-bored.ipynb  l04-instructor.ipynb  l04.ipynb
biosc1540/lectures/05/: .pages  index.md  l05-key.ipynb  l05.ipynb
biosc1540/lectures/06/: .pages  index.md  l06-old.ipynb  l06.ipynb
biosc1540/lectures/07/: .pages  amr-activity.md  index.md
biosc1540/lectures/08/: DeBruijn.ipynb  index.md  phred-score.ipynb
biosc1540/lectures/09/: index.md
biosc1540/lectures/10/: index.md
biosc1540/lectures/12/: index.md
biosc1540/lectures/13/: index.md
biosc1540/lectures/14/: index.md
biosc1540/lectures/15/: .pages  index.ipynb  l15.ipynb
biosc1540/lectures/18/: index.md
biosc1540/lectures/19/: index.md
biosc1540/lectures/20/: index.md
biosc1540/lectures/21/: index.md
biosc1540/lectures/22/: index.md
biosc1540/lectures/23/: .gitignore  index.md  md.ipynb  scalars.csv
biosc1540/lectures/cadd/: .pages  index.md
biosc1540/lectures/genomics/: .pages  index.md
biosc1540/lectures/intro/: index.md
biosc1540/lectures/transcriptomics/: .pages  index.md
biosc1540/modules/: .pages  index.md
biosc1540/modules/00/: index.md
biosc1540/modules/01/: index.md
biosc1540/modules/02/: index.md
biosc1540/modules/03/: index.md
biosc1540/modules/04/: index.md
biosc1540/modules/05/: index.md
biosc1540/modules/bonus/: index.md
biosc1540/modules/cadd/: .pages  docking.md  drug-discovery-pipeline.md  index.md  lead-optimization.md  learning-scenario.md  ligand-based-screening.md  protein-protein-interactions.md  scoring-functions.md
biosc1540/modules/docking/: index.md
biosc1540/modules/genomics/: .pages  case-study.md  de-novo-gene-annotation.md  evolutionary-genomics.md  gene-annotation.md  gene-identification.md  genome-assembly.md  index.md  learning-scenario.md  ref-gene-annotation.md  sequence-alignment.md  sequencing.md
biosc1540/modules/intro/: .pages  clustering.md  index.md
biosc1540/modules/modeling/: .pages  index.md
biosc1540/modules/prelims/: .pages  index.md  nucleic-acids.md  proteins-plus.md  proteins.md
biosc1540/modules/python-ml/: .pages  clustering.md  comp-bio.md  data-manipulation.md  data.md  index.md  model-framing.md  modeling-philosophy.md  neural-networks.md  plotting.md  programming-langs.md  python-basics.md  regression.md
biosc1540/modules/simulations/: .pages  alchemical-simulations.md  index.md  learning-scenario.md  molecular-mechanics.md  molecular-simulations.md  rare-event-sampling.md  simulation-workflow.md  structural-dynamic-analysis.md
biosc1540/modules/toolkit/: index.md
biosc1540/modules/transcriptomics/: .pages  gene-expression-analysis.md  index.md  learning-scenario.md  quantification.md  read-mapping.md  single-cell.md  spatial.md
biosc1540/resources/: .pages
biosc1540/resources/jobs/: .pages  index.md
biosc1540/resources/processing/: clean_pka_csv.ipynb  compute_pka_descriptors.ipynb  index.md  select_pka_features.ipynb
biosc1540/resources/readability/: automated-readability-index.md  flesch-kincaid.md
biosc1540/resources/targets/: .pages  index.md
biosc1540/stylesheets/: extra.css
biosc1540/syllabus/: .pages  assessments.md  attendance.md  cadences.md  grading.md  index.md  outcomes.md  philosophy.md  policies.md  schedule.md
biosc1540/tools/: .pages
biosc1540/tools/sra/: .pages  README.md  installation.md  scripts.md  sra-toolkit.md
hooks/: git.py  launchy.py  read-info.py
large-files/: ecoli-transcriptome-cell.stress.csv
overrides/: main.html
(+129 files in other folders)
