[tool.poetry]
name = "pitt-biosc1540-2024s"
version = "0.0.0"
description = ""
authors = [
    "OASCI <us@oasci.org>",
]
readme = "README.md"
license = "CC BY 4.0"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.7"
material-plausible-plugin = "^0.2.0"
pymdown-extensions = "^10.3.1"
mkdocs-table-reader-plugin = "^2.0.3"
pylint = "^3.0.2"

[tool.bumpversion]
current_version = "2023.11.2"
tag = true
commit = true

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format-jinja = "{%- if distance == 0 -%}{{ serialize_pep440(base) }}{%- else -%}{{ serialize_pep440(base, post=distance) }}{%- endif -%}"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"

["tool.poetry.group.conda.dependencies"]
appdirs = "^1.4.4"
Brotli = "^1.1.0"
build = "^1.0.3"
CacheControl = "^0.13.1"
cachy = "^0.3.0"
certifi = "^2023.7.22"
cffi = "^1.16.0"
cfgv = "^3.3.1"
charset-normalizer = "^3.3.2"
cleo = "^2.1.0"
click = "^8.1.7"
click-default-group = "^1.2.4"
clikit = "^0.6.2"
colorama = "^0.4.6"
conda_lock = "^2.4.2"
conda_poetry_liaison = "^0.1.2"
crashtest = "^0.4.1"
cryptography = "^41.0.5"
distlib = "^0.3.7"
dulwich = "^0.21.6"
ensureconda = "^1.4.3"
fastjsonschema = "^2.18.1"
filelock = "^3.13.1"
gitdb = "^4.0.11"
GitPython = "^3.1.40"
html5lib = "^1.1"
identify = "^2.5.31"
idna = "^3.4"
importlib-metadata = "^6.8.0"
installer = "^0.7.0"
"jaraco.classes" = "^3.3.0"
jeepney = "^0.8.0"
Jinja2 = "^3.1.2"
keyring = "^24.2.0"
MarkupSafe = "^2.1.3"
more-itertools = "^10.1.0"
msgpack = "^1.0.6"
nodeenv = "^1.8.0"
numpy = "^1.26.0"
packaging = "^23.2"
pastel = "^0.2.1"
pexpect = "^4.8.0"
pip = "^23.3.1"
pkginfo = "^1.9.6"
platformdirs = "^3.11.0"
poetry = "^1.7.0"
poetry-core = "^1.8.1"
poetry-plugin-export = "^1.6.0"
pre-commit = "^3.5.0"
ptyprocess = "^0.7.0"
pycparser = "^2.21"
pydantic = "^2.4.2"
pydantic_core = "^2.10.1"
pylev = "^1.4.0"
pyproject_hooks = "^1.0.0"
PySocks = "^1.7.1"
PyYAML = "^6.0.1"
rapidfuzz = "^3.5.2"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
"ruamel.yaml" = "^0.18.5"
"ruamel.yaml.clib" = "^0.2.7"
SecretStorage = "^3.3.3"
setuptools = "^68.2.2"
shellingham = "^1.5.4"
six = "^1.16.0"
smmap = "^5.0.0"
tomli = "^2.0.1"
tomli_w = "^1.0.0"
tomlkit = "^0.12.2"
toolz = "^0.12.0"
trove-classifiers = "^2023.11.9"
typing_extensions = "^4.8.0"
ukkonen = "^1.0.1"
urllib3 = "^1.26.18"
virtualenv = "^20.24.6"
webencodings = "^0.5.1"
wheel = "^0.41.3"
zipp = "^3.17.0"
