[tool.poetry]
name = "pitt-biosc1540-2024s"
version = "0.0.0"
description = ""
authors = [
    "OASCI <us@oasci.org>",
]
readme = "README.md"
license = "CC BY-NC-SA 4.0"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.7"
material-plausible-plugin = "^0.2.0"
pymdown-extensions = "^10.3.1"
mkdocs-table-reader-plugin = "^2.0.3"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.3"
mkdocs-gen-files = "^0.5.0"
mkdocs-awesome-pages-plugin = "^2.9.2"
jupyterlab = "^4.0.10"
mkdocs-jupyter = "^0.24.6"
python-dotenv = "^1.0.0"
plotly = "^5.18.0"
matplotlib = "^3.8.2"
mkdocs-glightbox = "^0.3.5"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
openpyxl = "^3.1.2"
beautifulsoup4 = "^4.12.2"
mkdocs-macros-plugin = "^1.0.5"
textstat = "^0.7.3"
pytest = "^7.4.4"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
isort = "^5.12.0"
pylint = "^3.0.2"
mypy = "^1.6.0"
mypy-extensions = "^1.0.0"
bump-my-version = "^0.11.0"
poetry-dynamic-versioning = "^1.1.0"

[tool.bumpversion]
current_version = "2023.11.2"
tag = true
commit = true

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format-jinja = "{%- if distance == 0 -%}{{ serialize_pep440(base) }}{%- else -%}{{ serialize_pep440(base, post=distance) }}{%- endif -%}"

[tool.pylint.messages_control]
good-names = [
    "i",
    "j",
    "e",
    "ex",
]
ignore = [
    "CVS",
    "_version.py",
    "conf.py",
]

[tool.black]
target-version = [
    "py311",
]
line-length = 88
color = true
exclude = "/(\n    \\.git\n    | \\.hg\n    | \\.mypy_cache\n    | \\.tox\n    | \\.venv\n    | _build\n    | buck-out\n    | build\n    | dist\n    | env\n    | venv\n)/\n"

[tool.isort]
py_version = 311
line_length = 88
known_typing = [
    "typing",
    "types",
    "typing_extensions",
    "mypy",
    "mypy_extensions",
]
sections = [
    "FUTURE",
    "TYPING",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
profile = "black"
include_trailing_comma = true
multi_line_output = 3
indent = 4
color_output = true

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"

["tool.poetry.group.conda.dependencies"]
Brotli = "^1.0.9"
build = "^1.0.3"
CacheControl = "^0.13.1"
cachy = "^0.3.0"
certifi = "^2023.11.17"
cffi = "^1.16.0"
cfgv = "^3.3.1"
charset-normalizer = "^2.0.4"
cleo = "^2.1.0"
click = "^8.1.7"
click-default-group = "^1.2.2"
clikit = "^0.6.2"
colorama = "^0.4.6"
conda_lock = "^1.4.0"
conda_poetry_liaison = "^0.1.2"
crashtest = "^0.4.1"
cryptography = "^41.0.7"
distlib = "^0.3.6"
dulwich = "^0.21.7"
ensureconda = "^1.4.3"
fastjsonschema = "^2.19.1"
filelock = "^3.13.1"
html5lib = "^1.1"
identify = "^2.5.33"
idna = "^3.4"
importlib-metadata = "^6.0.0"
installer = "^0.7.0"
"jaraco.classes" = "^3.2.1"
jeepney = "^0.7.1"
Jinja2 = "^3.1.2"
keyring = "^24.3.0"
lockfile = "^0.12.2"
MarkupSafe = "^2.1.3"
more-itertools = "^10.1.0"
msgpack = "^1.0.3"
nodeenv = "^1.8.0"
numpy = "^1.26.2"
packaging = "^23.1"
pastel = "^0.2.1"
pexpect = "^4.8.0"
pip = "^23.3.2"
pkginfo = "^1.9.6"
platformdirs = "^3.11.0"
poetry = "^1.7.1"
poetry-core = "^1.8.1"
poetry-plugin-export = "^1.6.0"
pre-commit = "^3.6.0"
ptyprocess = "^0.7.0"
pycparser = "^2.21"
pydantic = "^1.10.12"
pylev = "^1.3.0"
pyOpenSSL = "^23.2.0"
pyproject_hooks = "^1.0.0"
PySocks = "^1.7.1"
PyYAML = "^6.0.1"
rapidfuzz = "^3.5.2"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
"ruamel.yaml" = "^0.17.21"
SecretStorage = "^3.3.1"
setuptools = "^68.2.2"
shellingham = "^1.5.4"
six = "^1.16.0"
tomli = "^2.0.1"
tomli_w = "^1.0.0"
tomlkit = "^0.12.3"
toolz = "^0.12.0"
trove-classifiers = "^2023.11.29"
typing_extensions = "^4.7.1"
ukkonen = "^1.0.1"
urllib3 = "^1.26.18"
virtualenv = "^20.24.1"
webencodings = "^0.5.1"
wheel = "^0.42.0"
zipp = "^3.17.0"
